@startuml dungeon_crawler

class Juego {
    -dimencionesVentana
    +window
}

class AdministradorDragon {
    -Listadragones
    +Actualizacion()
    +NumeroAleatorio()
    +NuevoDragon()
    +draw()
    +GenerarDragones()
    +GetCoordenadas()
    +EliminarDragon()
    +ExistenDragones()
}

class Jugador {
    -prota 
    -barraVida 
    -reloj 
    -offsetX 
    -offsetY 
    -velocidad 
    -teletransporteHabilitado 
    -dimencionesVentana 
    -CantidadVida 
    +ActualizarVida() 
    +RecibirDaño() 
    +draw()
    +GetPosicion() 
    +MoverAlPersonaje() 
    +TeletransportarOrigen() 
    +Correr() 
    +Teletransporte() 
    +VerificarEstado() 
    +GetVida()
}


class AdministradorMapa {
    -sprite 
    -texturaC 
    -texturaD 
    -texturaI 
    -texturaM 
    -texturaMo 
    -check() 
    -MapaAlelatorio() 
    +getSprite() 
    +draw() 
    +Elegirmapa() 
}

class Dragon {
    -dragon 
    -posicionDeComparacion
    -clock
    -vida 
    -nivel_actual 
    -nivel_actualD
    -nivel 
    -velocidad 
    -ActualizarNivel()
    -Print()
    +baseY 
    +GetNivelActual()
    +GetPosicion() 
    +IncrementarNivel() 
    +DecrementarNivel() 
    +Seguir() 
    +draw() 
    +Vive() 
}

class AdminAtaque {
    -ListaAtaques
    +EliminarTodo()
    +NuevoAtaque()
    +Actualizacion()
    +CheckHit()
    +draw() 
}
class Ataque {
    -ataque
    -destino
    -cambio
    -posicion0
    -f
    -duracion
    -tiempoTranscurrido
    -rangoDeAtaque
    -pendiente
    -DireccionCheck()
    -ActualizarLocalizacion()
    +baseY
    +CalculoVariables()
    +trayecto()
    +ProyectarImagen()
    +draw()
    +EstaVivo()
    +Comparar()
}
class Contador {
    -cloc
    +GetTiempo()
    +Esperar()
    +ResetearReloj()
}

class Imagen {
    -sprite 
    -textureC 
    -coord_x 
    -coord_y 
    -ancho 
    -alto 
    -x 
    -y 
    -check() 
    +coordenadas 
    +ObtenerVectorCoordenadas() 
    +getSprite() 
    +cambiarImagen() 
    +posicion() 
    +mover() 
}

class AdministradorNivel {
    -NumeroNivel 
    +GetNivelActual()
    +SiguienteNivel() 
}

Juego "1" o-- "1" Jugador 
Juego "1" o-- "1" AdministradorDragon 
Juego "1" o-- "1" AdminAtaque 
Juego "1" o-- "3" Contador 
Juego "1" o-- "1" AdministradorNivel 
Juego "1" o-- "1" AdministradorMapa 

AdminAtaque "1" *-- "*" Ataque

Jugador "1" o-- "*" Ataque

AdministradorDragon "1" *-- "*" Dragon

Dragon "1" *-- "1" Imagen
Jugador "1" *-- "1" Imagen
Ataque "1" *-- "1" Imagen

@enduml